--- a/Remotion/ObjectBinding/Web/Globalization/BocList.fr.resx
+++ b/Remotion/ObjectBinding/Web/Globalization/BocList.fr.resx
@@ -180,7 +180,10 @@
   <data name="Remotion.ObjectBinding.Web.UI.Controls.BocList.ValidationColumnTitleText" xml:space="preserve">
     <value>Message</value>
   </data>
-  <data name="Remotion.ObjectBinding.Web.UI.Controls.BocList.ValidationFailuresFoundInListErrorMessage" xml:space="preserve">
+  <data name="Remotion.ObjectBinding.Web.UI.Controls.BocList.UnhandledValidationFailuresFoundErrorMessage" xml:space="preserve">
     <value>Saisie non valable dans un moins une ligne masquée.</value>
+  </data>
+  <data name="Remotion.ObjectBinding.Web.UI.Controls.BocList.ValidationFailuresFoundInListErrorMessage" xml:space="preserve">
+    <value>Saisie non valable dans un moins une ligne. Vérifiez les lignes pour plus de détails.</value>
   </data>
 </root>
