--- a/Remotion/ObjectBinding/Web/Globalization/BocList.resx
+++ b/Remotion/ObjectBinding/Web/Globalization/BocList.resx
@@ -180,7 +180,10 @@
   <data name="Remotion.ObjectBinding.Web.UI.Controls.BocList.ValidationColumnTitleText" xml:space="preserve">
     <value>Message</value>
   </data>
-  <data name="Remotion.ObjectBinding.Web.UI.Controls.BocList.ValidationFailuresFoundInListErrorMessage" xml:space="preserve">
+  <data name="Remotion.ObjectBinding.Web.UI.Controls.BocList.UnhandledValidationFailuresFoundErrorMessage" xml:space="preserve">
     <value>Invalid input in at least one hidden row.</value>
+  </data>
+  <data name="Remotion.ObjectBinding.Web.UI.Controls.BocList.ValidationFailuresFoundInListErrorMessage" xml:space="preserve">
+    <value>Invalid input in at least one row. Check the rows for more details.</value>
   </data>
 </root>
