--- a/Remotion/ObjectBinding/Web/Globalization/BocList.it.resx
+++ b/Remotion/ObjectBinding/Web/Globalization/BocList.it.resx
@@ -180,7 +180,10 @@
   <data name="Remotion.ObjectBinding.Web.UI.Controls.BocList.ValidationColumnTitleText" xml:space="preserve">
     <value>Messaggio</value>
   </data>
-  <data name="Remotion.ObjectBinding.Web.UI.Controls.BocList.ValidationFailuresFoundInListErrorMessage" xml:space="preserve">
+  <data name="Remotion.ObjectBinding.Web.UI.Controls.BocList.UnhandledValidationFailuresFoundErrorMessage" xml:space="preserve">
     <value>Input non valido in almeno una riga nascosta.</value>
+  </data>
+  <data name="Remotion.ObjectBinding.Web.UI.Controls.BocList.ValidationFailuresFoundInListErrorMessage" xml:space="preserve">
+    <value>Input non valido in almeno una riga. Controlla le righe per maggiori dettagli.</value>
   </data>
 </root>
