RM-5477 Add support for expanding the result set in the autocomplete

--- a/Remotion/ObjectBinding/Web/Globalization/BocAutoCompleteReferenceValueRenderer.de.resx
+++ b/Remotion/ObjectBinding/Web/Globalization/BocAutoCompleteReferenceValueRenderer.de.resx
@@ -132,4 +132,10 @@
   <data name="Remotion.ObjectBinding.Web.UI.Controls.BocReferenceValueImplementation.Rendering.BocAutoCompleteReferenceValueRenderer.ScreenReaderLabelForComboboxReadOnly" xml:space="preserve">
       <value>nur lesen kombiniertes Eingabefeld</value>
   </data>
+  <data name="Remotion.ObjectBinding.Web.UI.Controls.BocReferenceValueImplementation.Rendering.BocAutoCompleteReferenceValueRenderer.LoadedMoreMatchesMessage" xml:space="preserve">
+    <value>Weitere Treffer wurden geladen.</value>
+  </data>
+  <data name="Remotion.ObjectBinding.Web.UI.Controls.BocReferenceValueImplementation.Rendering.BocAutoCompleteReferenceValueRenderer.LoadingMoreMatchesMessage" xml:space="preserve">
+    <value>Weitere Treffer werden geladen.</value>
+  </data>
 </root>
