RM-9155 Screenreader informs user on click when no children were found in treeView

--- a/Remotion/Web/Core/Globalization/WebTreeView.de.resx
+++ b/Remotion/Web/Core/Globalization/WebTreeView.de.resx
@@ -120,4 +120,10 @@
   <data name="Remotion.Web.UI.Controls.WebTreeView.ScreenReaderNodeSelectedLabelText" xml:space="preserve">
     <value>ausgewählt</value>
   </data>
+  <data name="Remotion.Web.UI.Controls.WebTreeView.ScreenReaderNoItemFoundText" xml:space="preserve">
+      <value>Enthält keine Elemente.</value>
+  </data>
+  <data name="Remotion.Web.UI.Controls.WebTreeView.ScreenReaderPossiblyNoChildrenText" xml:space="preserve">
+    <value>Enthält möglicherweise keine Elemente.</value>
+  </data>
 </root>
