--- a/Remotion/Web/Core/Globalization/WebTreeView.fr.resx
+++ b/Remotion/Web/Core/Globalization/WebTreeView.fr.resx
@@ -120,4 +120,10 @@
   <data name="Remotion.Web.UI.Controls.WebTreeView.ScreenReaderNodeSelectedLabelText" xml:space="preserve">
     <value>sélectionné</value>
   </data>
+  <data name="Remotion.Web.UI.Controls.WebTreeView.ScreenReaderNoItemFoundText" xml:space="preserve">
+      <value>Ne contient aucun élément.</value>
+  </data>
+  <data name="Remotion.Web.UI.Controls.WebTreeView.ScreenReaderPossiblyNoChildrenText" xml:space="preserve">
+    <value>Peut ne contenir aucun éléments.</value>
+  </data>
 </root>
